@@ -3,6 +3,7 @@ package org.opentripplanner.ext.fares.impl;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.opentripplanner.ext.fares.impl.OrcaFareService.COMM_TRANS_AGENCY_ID;
 import static org.opentripplanner.ext.fares.impl.OrcaFareService.COMM_TRANS_FLEX_AGENCY_ID;
 import static org.opentripplanner.ext.fares.impl.OrcaFareService.KC_METRO_AGENCY_ID;
@@ -21,6 +22,7 @@ import static org.opentripplanner.transit.model.basic.Money.usDollars;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -33,11 +35,12 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.opentripplanner._support.time.ZoneIds;
+import org.opentripplanner.ext.fares.impl._support.FareModelForTest;
 import org.opentripplanner.ext.fares.model.FareRuleSet;
 import org.opentripplanner.framework.geometry.WgsCoordinate;
 import org.opentripplanner.framework.i18n.NonLocalizedString;
 import org.opentripplanner.framework.model.Cost;
-import org.opentripplanner.model.fare.FareProductUse;
+import org.opentripplanner.model.fare.FareOffer;
 import org.opentripplanner.model.fare.ItineraryFare;
 import org.opentripplanner.model.plan.Itinerary;
 import org.opentripplanner.model.plan.Leg;
@@ -57,8 +60,8 @@ public class OrcaFareServiceTest {
   private static final Money TWO_DOLLARS = usDollars(2);
   private static final Money HALF_FERRY_FARE = usDollars(1.75f);
   private static final Money ORCA_SPECIAL_FARE = usDollars(1.00f);
-  public static final Money VASHON_WATER_TAXI_CASH_FARE = usDollars(6.75f);
-  public static final Money WEST_SEATTLE_WATER_TAXI_CASH_FARE = usDollars(5.75f);
+  public static final Money VASHON_WATER_TAXI_CASH_FARE = usDollars(7.00f);
+  public static final Money WEST_SEATTLE_WATER_TAXI_CASH_FARE = usDollars(6.25f);
   private static final String FEED_ID = "A";
   private static TestOrcaFareService orcaFareService;
   public static final Money DEFAULT_TEST_RIDE_PRICE = usDollars(3.49f);
@@ -81,47 +84,83 @@ public class OrcaFareServiceTest {
   private static void calculateFare(List<Leg> legs, FareType fareType, Money expectedPrice) {
     var itinerary = Itinerary.ofScheduledTransit(legs).withGeneralizedCost(Cost.ZERO).build();
     var itineraryFares = orcaFareService.calculateFares(itinerary);
-    assertEquals(
-      expectedPrice,
-      itineraryFares
-        .getItineraryProducts()
-        .stream()
-        .filter(fareProduct -> fareProduct.name().equals(fareType.name()))
-        .findFirst()
-        .get()
-        .price()
+
+    // Get the expected rider category name from the fare type
+    var expectedCategoryName = getRiderCategoryName(fareType);
+    var expectedMediumName = usesOrca(fareType) ? "electronic" : "cash";
+
+    // Track unique fare products by their ID to avoid double counting
+    var uniqueFareProducts = new HashSet<FareOffer>();
+
+    legs.forEach(leg -> {
+      var legProducts = itineraryFares.getLegProducts().get(leg);
+      for (var offer : legProducts) {
+        var product = offer.fareProduct();
+        if (
+          product.category().name().equals(expectedCategoryName) &&
+          product.medium().name().equals(expectedMediumName)
+        ) {
+          uniqueFareProducts.add(offer);
+        }
+      }
+    });
+
+    // Calculate total fare by summing unique fare products
+    var totalFare = uniqueFareProducts
+      .stream()
+      .reduce(Money.ZERO_USD, (sum, offer) -> sum.plus(offer.fareProduct().price()), Money::plus);
+
+    assertEquals(expectedPrice, totalFare);
+  }
+
+  private static String getRiderCategoryName(FareType fareType) {
+    var splitFareType = fareType.toString().split("electronic");
+    if (splitFareType.length > 1) {
+      return splitFareType[1].toLowerCase();
+    } else {
+      return fareType.toString();
+    }
+  }
+
+  private static boolean usesOrca(FareType fareType) {
+    return (
+      fareType.equals(FareType.electronicSpecial) ||
+      fareType.equals(FareType.electronicSenior) ||
+      fareType.equals(FareType.electronicRegular) ||
+      fareType.equals(FareType.electronicYouth)
     );
   }
 
   private static void assertLegFareEquals(int fare, Leg leg, ItineraryFare fares, boolean hasXfer) {
     var legFareProducts = fares.getLegProducts().get(leg);
 
-    var rideCost = legFareProducts
-      .stream()
-      .map(FareProductUse::product)
-      .filter(
-        fp ->
-          fp.medium().name().equals("electronic") &&
-          fp.category().name().equals("regular") &&
-          fp.name().equals("rideCost")
-      )
-      .findFirst();
-    if (rideCost.isEmpty()) {
-      Assertions.fail("Missing leg fare product.");
+    if (legFareProducts == null || legFareProducts.isEmpty()) {
+      Assertions.fail("No leg fare products found for leg.");
+      return;
     }
-    Assertions.assertEquals(fare, rideCost.get().price().minorUnitAmount());
 
-    var transfer = legFareProducts
+    // Calculate the cost specific to this leg by only counting new fare products created for this leg
+    // When a leg uses a transfer, existing fare products are applied but we should only count new costs
+    var newFareProducts = legFareProducts
       .stream()
-      .map(FareProductUse::product)
-      .filter(
-        fp ->
+      .filter(fpl -> {
+        var fp = fpl.fareProduct();
+        return (
           fp.medium().name().equals("electronic") &&
           fp.category().name().equals("regular") &&
-          fp.name().equals("transfer")
-      )
-      .findFirst();
-    Assertions.assertEquals(hasXfer, transfer.isPresent(), "Incorrect transfer leg fare product.");
+          fpl.startTime().equals(leg.startTime()) // Only count fare products created at this leg's start time
+        );
+      })
+      .mapToInt(fpl -> fpl.fareProduct().price().minorUnitAmount())
+      .sum();
+
+    assertEquals(fare, newFareProducts, "Leg fare amount mismatch");
+
+    // Check for transfer status - transfers are when this leg has fare products but pays no additional cost
+    // (i.e., fare = 0 for this leg because it's covered by a previous fare product)
+    var hasTransfer = (fare == 0 && !legFareProducts.isEmpty());
+
+    assertEquals(hasXfer, hasTransfer, "Incorrect transfer leg fare product status.");
   }
 
   /**
@@ -131,11 +170,11 @@ public class OrcaFareServiceTest {
   void calculateFareForSingleAgency() {
     List<Leg> rides = List.of(getLeg(COMM_TRANS_AGENCY_ID, "400", 0));
     calculateFare(rides, regular, DEFAULT_TEST_RIDE_PRICE);
-    calculateFare(rides, FareType.senior, usDollars(1.25f));
+    calculateFare(rides, FareType.senior, usDollars(1.00f));
     calculateFare(rides, FareType.youth, ZERO_USD);
-    calculateFare(rides, FareType.electronicSpecial, usDollars(1.25f));
+    calculateFare(rides, FareType.electronicSpecial, usDollars(1.00f));
     calculateFare(rides, FareType.electronicRegular, DEFAULT_TEST_RIDE_PRICE);
-    calculateFare(rides, FareType.electronicSenior, usDollars(1.25f));
+    calculateFare(rides, FareType.electronicSenior, usDollars(1.00f));
     calculateFare(rides, FareType.electronicYouth, ZERO_USD);
   }
 
@@ -151,15 +190,15 @@ public class OrcaFareServiceTest {
       getLeg(COMM_TRANS_AGENCY_ID, 2)
     );
     calculateFare(rides, regular, DEFAULT_TEST_RIDE_PRICE.times(3));
-    calculateFare(rides, FareType.senior, DEFAULT_TEST_RIDE_PRICE.plus(usDollars(2.25f)));
+    calculateFare(rides, FareType.senior, DEFAULT_TEST_RIDE_PRICE.plus(usDollars(2f)));
     calculateFare(rides, FareType.youth, Money.ZERO_USD);
     calculateFare(
       rides,
       FareType.electronicSpecial,
-      DEFAULT_TEST_RIDE_PRICE.plus(usDollars(1.25f))
+      DEFAULT_TEST_RIDE_PRICE.plus(usDollars(1.00f))
     );
     calculateFare(rides, FareType.electronicRegular, DEFAULT_TEST_RIDE_PRICE.times(2));
-    calculateFare(rides, FareType.electronicSenior, DEFAULT_TEST_RIDE_PRICE.plus(usDollars(1.25f)));
+    calculateFare(rides, FareType.electronicSenior, DEFAULT_TEST_RIDE_PRICE.plus(usDollars(1.00f)));
     calculateFare(rides, FareType.electronicYouth, Money.ZERO_USD);
   }
 
@@ -311,12 +350,12 @@ public class OrcaFareServiceTest {
     calculateFare(rides, FareType.electronicYouth, Money.ZERO_USD);
 
     rides = List.of(getLeg(KITSAP_TRANSIT_AGENCY_ID, 0, 4, "404", "west"));
-    calculateFare(rides, regular, usDollars(10f));
-    calculateFare(rides, FareType.senior, usDollars(5f));
+    calculateFare(rides, regular, usDollars(12f));
+    calculateFare(rides, FareType.senior, usDollars(6f));
     calculateFare(rides, FareType.youth, Money.ZERO_USD);
-    calculateFare(rides, FareType.electronicSpecial, usDollars(5f));
-    calculateFare(rides, FareType.electronicRegular, usDollars(10f));
-    calculateFare(rides, FareType.electronicSenior, usDollars(5f));
+    calculateFare(rides, FareType.electronicSpecial, usDollars(6f));
+    calculateFare(rides, FareType.electronicRegular, usDollars(12f));
+    calculateFare(rides, FareType.electronicSenior, usDollars(6f));
     calculateFare(rides, FareType.electronicYouth, Money.ZERO_USD);
   }
 
@@ -364,8 +403,8 @@ public class OrcaFareServiceTest {
     calculateFare(rides, regular, WEST_SEATTLE_WATER_TAXI_CASH_FARE);
     calculateFare(rides, FareType.senior, usDollars(2.50f));
     calculateFare(rides, FareType.youth, Money.ZERO_USD);
-    calculateFare(rides, FareType.electronicSpecial, usDollars(3.75f));
-    calculateFare(rides, FareType.electronicRegular, usDollars(5f));
+    calculateFare(rides, FareType.electronicSpecial, usDollars(1.00f));
+    calculateFare(rides, FareType.electronicRegular, usDollars(5.25f));
     calculateFare(rides, FareType.electronicSenior, usDollars(2.50f));
     calculateFare(rides, FareType.electronicYouth, Money.ZERO_USD);
 
@@ -374,8 +413,8 @@ public class OrcaFareServiceTest {
     calculateFare(rides, regular, VASHON_WATER_TAXI_CASH_FARE);
     calculateFare(rides, FareType.senior, usDollars(3f));
     calculateFare(rides, FareType.youth, Money.ZERO_USD);
-    calculateFare(rides, FareType.electronicSpecial, usDollars(4.50f));
-    calculateFare(rides, FareType.electronicRegular, usDollars(5.75f));
+    calculateFare(rides, FareType.electronicSpecial, usDollars(1.00f));
+    calculateFare(rides, FareType.electronicRegular, usDollars(6.00f));
     calculateFare(rides, FareType.electronicSenior, usDollars(3f));
     calculateFare(rides, FareType.electronicYouth, Money.ZERO_USD);
   }
@@ -421,33 +460,32 @@ public class OrcaFareServiceTest {
       getLeg(KC_METRO_AGENCY_ID, 20),
       getLeg(COMM_TRANS_AGENCY_ID, 45),
       getLeg(KC_METRO_AGENCY_ID, 60),
-      getLeg(KC_METRO_AGENCY_ID, 130),
+      getLeg(KC_METRO_AGENCY_ID, 130), // second kcm fare
       getLeg(KITSAP_TRANSIT_AGENCY_ID, 131),
       getLeg(KITSAP_TRANSIT_AGENCY_ID, 132)
     );
-    calculateFare(rides, regular, DEFAULT_TEST_RIDE_PRICE.times(4));
-    calculateFare(rides, FareType.senior, usDollars(4.25f));
+    calculateFare(rides, regular, DEFAULT_TEST_RIDE_PRICE.times(3));
+    calculateFare(rides, FareType.senior, usDollars(3.00f));
     calculateFare(rides, FareType.youth, Money.ZERO_USD);
-    calculateFare(rides, FareType.electronicSpecial, usDollars(1.25f));
+    calculateFare(rides, FareType.electronicSpecial, usDollars(2.00f));
     calculateFare(rides, FareType.electronicRegular, DEFAULT_TEST_RIDE_PRICE.times(2));
-    calculateFare(rides, FareType.electronicSenior, usDollars(1.25f)); // Transfer extended by CT ride
+    calculateFare(rides, FareType.electronicSenior, usDollars(2.00f)); // Transfer extended by CT ride
     calculateFare(rides, FareType.electronicYouth, ZERO_USD);
   }
 
   @Test
   void calculateTransferExtension() {
     List<Leg> rides = List.of(
-      getLeg(KITSAP_TRANSIT_AGENCY_ID, 0, 4, "Kitsap Fast Ferry", "east"), // 2.00
-      getLeg(KC_METRO_AGENCY_ID, 100), // Default ride price, extends transfer for regular fare
-      getLeg(KITSAP_TRANSIT_AGENCY_ID, 150, 4, "Kitsap Fast Ferry", "west") // 10.00
+      getLeg(KC_METRO_AGENCY_ID, 0), // extended transfer due to middle leg
+      getLeg(KC_METRO_AGENCY_ID, "973", 100), // higher fare, extends transfer
+      getLeg(KC_METRO_AGENCY_ID, 219) // extended transfer due to middle leg
     );
-    var regularFare = usDollars(2.00f).plus(DEFAULT_TEST_RIDE_PRICE).plus(usDollars(10f));
-    calculateFare(rides, regular, regularFare);
-    calculateFare(rides, FareType.senior, usDollars(7f));
+    calculateFare(rides, regular, usDollars(13.23f));
+    calculateFare(rides, FareType.senior, usDollars(4.50f));
     calculateFare(rides, FareType.youth, Money.ZERO_USD);
-    calculateFare(rides, FareType.electronicSpecial, usDollars(6f));
-    calculateFare(rides, FareType.electronicRegular, usDollars(10f)); // transfer extended on second leg
-    calculateFare(rides, FareType.electronicSenior, usDollars(6f));
+    calculateFare(rides, FareType.electronicSpecial, usDollars(2.00f));
+    calculateFare(rides, FareType.electronicRegular, usDollars(5.25f)); // transfer extended on second leg
+    calculateFare(rides, FareType.electronicSenior, usDollars(2.50f));
     calculateFare(rides, FareType.electronicYouth, Money.ZERO_USD);
   }
 
@@ -531,19 +569,19 @@ public class OrcaFareServiceTest {
     var fares = orcaFareService.calculateFares(itinerary);
     assertNotNull(fares);
 
-    assertFalse(fares.getItineraryProducts().isEmpty());
+    assertTrue(fares.getItineraryProducts().isEmpty()); // New system uses only leg products
     assertFalse(fares.getLegProducts().isEmpty());
 
-    var firstLeg = itinerary.legs().get(0);
+    var firstLeg = itinerary.legs().getFirst();
     var uses = fares.getLegProducts().get(firstLeg);
     assertEquals(7, uses.size());
 
     var regular = uses
       .stream()
-      .filter(u -> u.product().category().name().equals("regular"))
+      .filter(u -> u.fareProduct().category().name().equals("regular"))
       .toList()
-      .get(0);
-    assertEquals(Money.usDollars(3.49f), regular.product().price());
+      .getFirst();
+    assertEquals(Money.usDollars(3.49f), regular.fareProduct().price());
   }
 
   private static Leg getLeg(String agencyId, long startTimeMins) {
